--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "react-scripts build",
-    "dev": "react-scripts start",  // For local development
+    "dev": "react-scripts start",  
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
